--- a/src/components/courses-content/coursesContent.css
+++ b/src/components/courses-content/coursesContent.css
@@ -27,8 +27,7 @@
       z-index: -1;
       width: 100%;
       height: 100%;
-      padding: 65px 50px;
-
+      padding: 50px 16px 50px 16px;
       object-fit: cover;
     }
 
