--- a/src/components/home-content/homeContent.css
+++ b/src/components/home-content/homeContent.css
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 50px 50px;
+  padding: 50px 50px 0 50px;
   background: #ffffff;
   height: auto;
 }
@@ -186,7 +186,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 50px 50px;
+  padding: 0 50px 50px 50px;
   background: #afafaf;
   height: 100vh;
 }
@@ -196,31 +196,31 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 50px 50px;
+  padding: 20px 50px;
   background: #ffffff;
   height: auto;
-
+  gap: 40px;
   .s2content {
     display: flex;
     flex-direction: column;
-    max-width: 60%;
+    max-width: 75%;
     align-items: center;
-
     h1 {
       font-family: "Sofia Pro Bold";
-      font-size: 3rem;
+      font-size: 2.5rem;
       font-weight: 700;
       margin: 20px 0;
-      color: #111;
+      color: #000000;
       text-align: center;
       text-transform: uppercase;
     }
 
     p {
+      padding: 0 20px;
       font-size: 1rem;
       text-align: center;
       width: 90%;
-      color: #6b7280;
+      color: #000000;
       font-weight: 100;
       font-family: worksans-n5;
     }
@@ -302,15 +302,183 @@
   }
 }
 
+.pg1section2text {
+  /* background-color: red; */
+  color: #000000;
+  font-size: 1.2rem;
+  font-weight: 600;
+  font-family: "Sofia Pro Bold";
+  text-align: center;
+  max-width: 70%;
+  h1 {
+    text-align: left;
+    font-size: 2rem;
+    margin: 20px 0;
+    color: #000000;
+    text-transform: uppercase;
+  }
+  p {
+    line-height: 2.5;
+    /* padding: 0 20px; */
+    font-size: 1rem;
+    text-align: left;
+    color: #000000;
+    font-weight: 100;
+    font-family: worksans-n5;
+  }
+}
+
+.pg1section3text {
+  color: #000000;
+  font-size: 1.2rem;
+  font-weight: 600;
+  font-family: "Sofia Pro Bold";
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  h1 {
+    text-align: center;
+    font-size: 2rem;
+    margin: 20px 0;
+    color: #000000;
+    width: 50%;
+    text-transform: uppercase;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #000000;
+  }
+  .alltxt {
+    /* background-color: #c6f8d5; */
+    display: flex;
+    flex-direction: row;
+    align-items: left;
+    justify-content: left;
+    width: 100%;
+    gap: 80px;
+    justify-content: space-evenly;
+    .p1 {
+      font-size: 1rem;
+      color: #000000;
+      font-weight: 100;
+      font-family: worksans-n5;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+    .p2 {
+      font-size: 1rem;
+      color: #000000;
+      font-weight: 100;
+      font-family: worksans-n5;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+    .course-item {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 20px;
+      border: #767676 1px solid;
+      padding: 10px;
+      border-radius: 15px;
+      width: 100%;
+    }
+
+    .course-item:hover {
+      background: linear-gradient(135deg, #c6f8d5, #a0f2ec);
+      color: #000;
+      border: none;
+      transform: scale(1.03);
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+      transition: all 0.3s ease;
+    }
+  }
+}
+
+.pg1section4text {
+  width: 70%;
+  font-size: 1.2rem;
+  font-weight: 600;
+  font-family: "Sofia Pro Bold";
+  h1 {
+    font-size: 2rem;
+    font-weight: 600;
+    font-family: "Sofia Pro Bold";
+    margin: 20px 0;
+    color: #000000;
+    text-align: left;
+    text-transform: uppercase;
+  }
+  p {
+    line-height: 2;
+    /* padding: 0 20px; */
+    font-size: 1rem;
+    text-align: left;
+    color: #000000;
+    font-weight: 100;
+    font-family: worksans-n5;
+  }
+}
+
+.pg1section5img {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin-top: 20px;
+  padding: 0 20px 0 100px;
+  gap: 20px;
+
+  .pg1section5image {
+    width: 45%;
+    height: 500px;
+    overflow: hidden;
+    display: flex;
+    justify-content: right;
+    align-items: flex-end;
+    /* background-color: red; */
+    align-items: end;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  .pg1section5text {
+    padding: 0 0 0 20px;
+    display: flex;
+    width: 45%;
+    flex-direction: column;
+    color: #000000;
+    gap: 20px;
+    h1 {
+      font-size: 2rem;
+      font-weight: 600;
+      font-family: "Sofia Pro Bold";
+      margin: 10px 0;
+      color: #000000;
+      text-align: left;
+      text-transform: uppercase;
+    }
+    p {
+      font-size: 1rem;
+      text-align: left;
+      color: #000000;
+      font-weight: 100;
+      font-family: worksans-n5;
+    }
+  }
+}
 .s2img {
   width: 75%;
   height: 100%;
-
   border-radius: 12px;
-
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  margin-top: 20px;
-
   .imgs video {
     overflow: hidden;
     width: 100%;
@@ -319,7 +487,7 @@
 }
 
 .student-reviews-section {
-  padding: 4rem 1rem;
+  padding: 3rem 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -382,7 +550,7 @@
 }
 
 .faq-section {
-  padding: 4rem 1rem;
+  padding: 3rem 1rem;
   background-color: #c6f8d5;
 
   .container {
