--- a/src/components/home-content/homeContentmedia.css
+++ b/src/components/home-content/homeContentmedia.css
@@ -2,7 +2,6 @@
   .pg1section1 {
     display: flex;
     align-items: center;
-    padding: 50px 50px;
     background: #ffffff;
     height: 100vh;
     justify-content: space-around;
@@ -171,7 +170,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 50px 50px;
     background: #afafaf;
     height: 100vh;
 
@@ -180,7 +178,6 @@
       flex-direction: column;
       align-items: center;
       justify-content: space-between;
-      padding: 50px 50px;
       background: #ffffff;
       height: auto;
     }
@@ -463,7 +460,6 @@
   .learn-more {
     font-size: small;
     height: 50px;
-    width: 50px;
     text-align: center;
   }
   .button-underline {
@@ -524,11 +520,10 @@
 
 @media (max-width: 768px) {
   .tag {
-    display: none;
+    font-family: worksans-n4;
     padding: 5px 10px;
     border-radius: 15px;
     font-size: 14px;
-    color: transparent;
     font-weight: 600;
   }
 
@@ -649,32 +644,132 @@
       height: fit-content;
       margin: 30px 0 50px 0;
     }
-
-}
-
-.image-container {
-  height: auto;
-}
-.content h1 {
-  margin-top: 1vh;
-  line-height: 1.2;
-}
-.image-overlay {
-  margin-top: 180px;
-  margin-left: 60px;
-  width: 80%;
-  padding: 5px 10px;
-  .badge {
-    font-size: 0.8rem;
   }
-  p {
-    font-size: 0.8rem;
-  }
-}
 
-.whatsapp-float.hide {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-  transition: opacity 0.4s ease, visibility 0.4s ease;
+  .image-container {
+    height: auto;
+  }
+  .content h1 {
+    margin-top: 0;
+    line-height: 1;
+    font-size: 12vw;
+  }
+  .image-overlay {
+    margin-top: 250px;
+    margin-left: 60px;
+    width: 80%;
+    padding: 5px 10px;
+    .badge {
+      font-size: 0.8rem;
+    }
+    p {
+      font-size: 0.8rem;
+    }
+  }
+  .buttons {
+    .button-text {
+      /* background-color: red; */
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+  .circle {
+    width: 100%;
+  }
+  button .circle .icon.arrow {
+    background: #fff;
+    transform: translate(1rem, 0);
+  }
+
+  button .button-text {
+    color: #fff;
+  }
+  .whatsapp-float.hide {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 0.4s ease, visibility 0.4s ease;
+  }
+  .pg1section2text {
+    max-width: 100%;
+    p {
+      line-height: 1.5;
+      padding: 0;
+      font-family: worksans-n4;
+    }
+  }
+  .pg1section3text {
+    width: 100%;
+    gap: 20px;
+    .alltxt {
+      gap: 40px;
+    }
+  }
+  .pg1section4text {
+    width: 100%;
+    h1 {
+      margin: 0px 0 20px 0;
+    }
+    p {
+      line-height: 1.5;
+      padding: 0;
+      font-family: worksans-n4;
+    }
+  }
+  .pg1section5img {
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+    .pg1section5image {
+      width: 100%;
+      height: 300px;
+    }
+    .pg1section5text {
+      padding: 0;
+      display: flex;
+      width: 100%;
+      p {
+        line-height: 1.5;
+        padding: 0;
+        font-family: worksans-n4;
+      }
+    }
+  }
+  .review-card {
+    padding: 1.5rem;
+  }
+  .review-feedback {
+    font-family: worksans-n4;
+    font-style: italic;
+    font-size: 1rem;
+    margin: 1rem 0;
+  }
+  .section-title {
+    font-size: 1.4rem;
+    text-align: center;
+    font-family: DM-Sans2;
+    font-weight: 800;
+
+    font-weight: 600;
+    font-family: "Sofia Pro Bold";
+    margin: 0 0 30px 0;
+    color: #000000;
+    text-transform: uppercase;
+  }
+  .faq-section {
+    .section-title {
+      font-size: 1.6rem;
+    }
+  }
+  .student-reviews-section {
+    padding: 1rem 1rem 2rem 1rem;
+  }
+  .faq-question.active {
+    border: none;
+    outline: none;
+  }
+  .pg1section1 {
+    padding: 60px 20px 0px 20px;
+  }
 }
