--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -2,7 +2,6 @@
 
 .navbar {
   position: fixed;
-
   top: 0;
   left: 0;
   right: 0;
@@ -162,9 +161,8 @@
   left: -260px;
   width: 260px;
   height: 100vh;
-  background: rgba(76, 76, 76, 0.25);
-  backdrop-filter: saturate(120%) blur(20px);
-
+  background: rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(20px);
   transition: left 0.3s ease-in-out;
   display: flex;
   flex-direction: column;
@@ -334,7 +332,7 @@
     padding: 1em;
   }
   .logo img {
-    height: 80px;
+    height: 60px;
     width: 100%;
     transition: height 0.3s ease-in-out;
   }
@@ -343,13 +341,20 @@
 @media (max-width: 480px) {
   .sidebar {
     width: 100%;
+    height: 100%;
   }
 
   .logo {
     margin: 0;
   }
   .sidebar-logo {
-    width: 80px;
+    width: 60px;
+    filter: invert();
+    margin-left: 20px;
+  }
+  .sidebar-close {
+    filter: invert();
+    margin-right: 20px;
   }
 
   .btn-enroll {
@@ -365,7 +370,4 @@
   .menu-icon {
     font-size: 1.4rem;
   }
-}
-
-@media (max-width: 768px) {
 }
